src/objects/Questionnaire_Implementation__c.object
<CustomObject>
    <fields>
        <fullName>ALM_Tools__c</fullName>
        <label>ALM Tools Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Challenges__c</fullName>
        <label>Challenges</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Implementation Questionnaires</relationshipLabel>
        <relationshipName>Implementation_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Version_Control_Tool_If_Exists__c</fullName>
        <label>Current Version Control Tool(If Exists)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Loader_Capabilities__c</fullName>
        <label>Data Loader Capabilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deployment_User__c</fullName>
        <description>List of Users and roles participating in the release process [ Please provide uniform  corporate e-mail Ids for license activation ]</description>
        <label>Deployment User</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hours_of_effort__c</fullName>
        <label>Hours of effort</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Long_Term_Goals__c</fullName>
        <label>Long Term Goals</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Sanbox_in_Release__c</fullName>
        <label>No.of Sanbox in Release</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpportunityAcc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ImplementationQuestionnaire</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Duration__c</fullName>
        <label>Release Duration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Short_Term_Goals_with_current_RLM__c</fullName>
        <label>Short Term Goals with current RLM</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Size_of_Sanboxes__c</fullName>
        <description>Number and Size of the Sandboxes [ Typically, the number of metadata components / size of package , Data load size and frequency ] that you will use in trial period</description>
        <label>Size of Sanboxes</label>
        <length>25000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text_Automation_Details__c</fullName>
        <label>Test Automation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Implementation Questionnaire</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Lead__c</columns>
        <columns>Challenges__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Quest{0}</displayFormat>
        <label>IQ- Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Implementation Questionnaires</pluralLabel>
    <recordTypes>
        <fullName>Lead_Questionnaire</fullName>
        <active>true</active>
        <label>Lead Questionnaire</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity_Questionnaire</fullName>
        <active>true</active>
        <label>Opportunity Questionnaire</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>